[package]
name = "migre"
version = "0.1.0"
authors = ["Ardin Fardiansyah <fardiansyah.ardin@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bus = "2.2.3"
structopt = "0.3.12"
toml =  "0.5.6"
serde = { version = "1.0.105", features = ["derive"] }

[dev-dependencies]
